package game;

import java.util.ArrayList;
import player.Player;

/**
 * The TemporaryMain is a temporary class that sets and gets the next
 * activeplayer. This class is called by the board and the MainGameLoop.
 */

public class TurnManager {
	private ArrayList<Player> players;
	private Player activePlayer;

	/**
	 * @param players ArrayList of players of the Player objects.
	 *
	 */
	public TurnManager(ArrayList<Player> players) {
		this.players = players;

	}

	/**
	 * @param activeplayer current active player of the Player object.
	 * 
	 *                     This method sets the first activeplayer of the game. It
	 *                     is used only once.
	 *
	 */
	public void setActiveplayer(Player activeplayer) {
		this.activePlayer = activeplayer;
	}

	/**
	 * This method sets the next active player of the game. This method is used in
	 * Board btnEndTurn to acccess the current player
	 */
	public void setTurn() {
		if (activePlayer == players.get(0)) {
			this.activePlayer = players.get(1);
		} else {
			this.activePlayer = players.get(0);
		}
	}

	/**
	 * @return this.activeplayer return the current activeplayer.
	 *
	 *         This method returns the activeplayer set in setTurn.
	 */
	public Player getTurn() {
		return this.activePlayer;

	}

}